devnet-src/security/nohup.out
  File "password-evolution.py", line 12
    return 'Welcome to the hands-on lab for an evolution of password
                                                                   ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 12
    return 'Welcome to the hands-on lab for an evolution of password
                                                                   ^
SyntaxError: EOL while scanning string literal
